fixed: hamburger visibility in dark mode

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --tertiary-color: #1e2024;
   --supplementary-color: #bcbcbd;
   --side-color: #d2d2d3;
-  --alt-color: #666666;
+  --alt-color: #666666; 
   --main-color: #141618;
 }
 
@@ -77,7 +77,7 @@ img {
   margin: 5px auto;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: #000;
+  background-color: var(--primary-color);
 }
 
 /* basic style for other elements */
